Fixed z-index and border radius in the element on home page (#24)
* fix: added z index and remove border radius

* fix: fix stylelint errors

--- a/assets/styles/components/_BlockFullWidthBackground.scss
+++ b/assets/styles/components/_BlockFullWidthBackground.scss
@@ -6,6 +6,7 @@
 
 .block-fullwidth-background {
 	background-color: $black;
+	border-radius: 0;
 
 	.wrapper-md {
 		margin-bottom: 0;
@@ -21,6 +22,7 @@
 		justify-content: center;
 		align-items: center;
 		padding-block: 8em 0;
+		z-index: 1;
 
 		padding-inline: 1.125em;
 
